# ai-rs

./: Cargo.toml
ai/: Cargo.toml
ai/src/: graph.rs  lib.rs
ai/src/mcts/: mod.rs  random_rollout.rs
ai/tests/number_game/: mod.rs
gui/: Cargo.toml
gui/src/: main.rs
mcts/: Cargo.toml
mcts/src/: graph.rs  ismcts.rs  lib.rs  mcts.rs
mcts/src/mcts/: mcts.rs  random_rollout.rs  termination.rs
mcts/tests/: test_mcts.rs
mcts/tests/perfect_info_game/: mod.rs
